--- a/Jupyter/Python3-Cheat_Sheet.ipynb
+++ b/Jupyter/Python3-Cheat_Sheet.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python - smaczki"
+    "# Python 3 - Cheat Sheet"
    ]
   },
   {
@@ -231,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
